--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-router-dom": "^5.3.1",
     "react-scripts": "5.0.1",
     "sass": "^1.51.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "swiper": "^8.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
